# OpenHire

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  SECURITY.md  core_agent_lines.sh  docker-compose.yml  entrypoint.sh  package-lock.json  pyproject.toml
.github/workflows/: codex-review.yml
assets/: report.html  report_en.html
docs/: 01-架构总览.md  02-Docker-Adapter框架.md  03-数字员工管理.md
openhire/: __init__.py  __main__.py  agent_skill_service.py  case_catalog.py  case_ops.py  cases.json  employee_templates.py  facade.py  memory_write_service.py  skill_catalog.py  skill_governance.py
openhire/adapters/: __init__.py  base.py  tool.py
openhire/admin/: __init__.py  auth.py  demo_mode.py  employee_context.py  runtime.py  runtime.pygrep  transcripts.py
openhire/agent/: __init__.py  autocompact.py  context.py  hook.py  loop.py  memory.py  (+3 more)
scripts/: admin_companion_smoke.mjs  repro_companion_chat.py
tests/: test_admin_auth.py  test_admin_context_actions.py  test_admin_page.py  test_admin_runtime.py  test_admin_transcripts.py  test_agent_skill_service.py  test_api_attachment.py  test_assignment_service.py  test_build_status.py  test_case_import.py  test_clawhub_provider.py  test_context_documents.py  test_demo_mode.py  test_docker.sh  test_docker_agent_tool_admin.py  test_dockerfile.py  test_document_parsing.py  test_employee_api.py  test_employee_lifecycle.py  test_employee_pool_e2e.py  test_employee_skill_selector.py  test_modelscope_demo_config.py  test_openai_api.py  test_openhands_docker_adapter.py  test_openhire_facade.py  test_openhire_tool.py  test_organization.py  test_package_version.py  test_runtime_monitor_loop.py  test_skill_api.py  test_skill_catalog_e2e.py  test_truncate_text_shadowing.py
(+214 files in other folders)
