[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openhire"
version = "0.1.5"
description = "OpenHire — digital employee orchestration platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenHire contributors" }]
dependencies = [
    "aiohttp>=3.12.0,<4.0.0",
    "anthropic>=0.45.0,<1.0.0",
    "croniter>=6.0.0,<7.0.0",
    "ddgs>=9.5.5,<10.0.0",
    "dingtalk-stream>=0.24.0,<1.0.0",
    "filelock>=3.16.0,<4.0.0",
    "httpx>=0.28.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "json-repair>=0.57.0,<1.0.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "loguru>=0.7.3,<1.0.0",
    "mcp>=1.26.0,<2.0.0",
    "msgpack>=1.1.0,<2.0.0",
    "oauth-cli-kit>=0.1.3,<1.0.0",
    "openai>=2.8.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "python-socketio>=5.16.0,<6.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "qq-botpy>=1.2.0,<2.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
    "tiktoken>=0.12.0,<1.0.0",
    "typer>=0.20.0,<1.0.0",
    "websockets>=16.0,<17.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0,<10.0.0",
    "pytest-asyncio>=0.24.0,<2.0.0",
]

[project.scripts]
openhire = "openhire.cli.commands:app"

[tool.hatch.build.targets.wheel]
packages = ["openhire"]

[tool.hatch.build.targets.sdist]
include = ["openhire", "tests", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
